--- a/cfg/FileManagerX.cfg
+++ b/cfg/FileManagerX.cfg
@@ -7,34 +7,30 @@ StartType = Depot|ShowForm
 
 /**************************************** A List of Current Depots & DataBases ***************************************/
 
-Depot = DepotC|D:\Space_For_Media\Pictures\FMX_Test_Depot_C
-DataBase = DepotC|SQL|127.0.0.1:3306\root\ani1357658uiu\Depot_C
-Depot = DepotD|D:\Space_For_Media\Pictures\FMX_Test_Depot_D
-DataBase = DepotD|TXT|D:\Space_For_Media\Pictures\FMX_Test_Depot_D
 
 /*************************************************** All Indexes *****************************************************/
 
-Next_FileIndex = 37
+Next_FileIndex = 0
 Next_UserIndex = 0
 Next_MachineIndex = 0
 Next_DepotIndex = 0
 Next_DataBaseIndex = 0
-This_MachineIndex = 5
-This_UserIndex = 2
-Server_MachineIndex = 4
-Server_UserIndex = 2
+This_MachineIndex = 0
+This_UserIndex = 0
+Server_MachineIndex = 0
+Server_UserIndex = 0
 
 /*************************************************** Machine Info ****************************************************/
 
-MachineIndex = 5
-MachineName = ozxdno-depot
+MachineIndex = 0
+MachineName = ozxdno
 MachineIP = 172.24.136.41
 MachinePort = 40001
 
 /*************************************************** Server Info *****************************************************/
 
-ServerMachineIndex = 4
-ServerMachineName = ozxdno-server
+ServerMachineIndex = 0
+ServerMachineName = 
 ServerMachineIP = 172.24.136.41
 ServerMachinePort = 40000
 
