--- a/cfg/FileManagerX.cfg
+++ b/cfg/FileManagerX.cfg
@@ -15,23 +15,23 @@ Next_UserIndex = 0
 Next_MachineIndex = 0
 Next_DepotIndex = 0
 Next_DataBaseIndex = 0
-This_MachineIndex = 0
-This_UserIndex = 0
-Server_MachineIndex = 0
-Server_UserIndex = 0
+This_MachineIndex = 3
+This_UserIndex = 1
+Server_MachineIndex = 1
+Server_UserIndex = 1
 
 /*************************************************** Machine Info ****************************************************/
 
-MachineIndex = 0
+MachineIndex = 3
 MachineName = ozxdno
 MachineIP = 172.24.136.41
-MachinePort = 40001
+MachinePort = 40000
 
 /*************************************************** Server Info *****************************************************/
 
-ServerMachineIndex = 0
-ServerMachineName = 
-ServerMachineIP = 172.24.136.41
+ServerMachineIndex = 1
+ServerMachineName = FileManagerX-Server
+ServerMachineIP = 120.79.65.238
 ServerMachinePort = 40000
 
 /***************************************************** User Info *****************************************************/
