ONE_IN_WWW ... OK

--- a/cfg/FileManagerX.cfg
+++ b/cfg/FileManagerX.cfg
@@ -3,6 +3,8 @@
 /****************************************** This File Is VERY IMPORTANT **********************************************/
 /****************************************** This File Is VERY IMPORTANT **********************************************/
 
+[Attention]: Do Not Save Other Infos in This File, It will reset At Running.
+
 StartType = Depot|ShowForm
 
 /**************************************** A List of Current Depots & DataBases ***************************************/
@@ -15,23 +17,23 @@ Next_UserIndex = 0
 Next_MachineIndex = 0
 Next_DepotIndex = 0
 Next_DataBaseIndex = 0
-This_MachineIndex = 3
+This_MachineIndex = 2
 This_UserIndex = 1
 Server_MachineIndex = 1
 Server_UserIndex = 1
 
 /*************************************************** Machine Info ****************************************************/
 
-MachineIndex = 3
-MachineName = ozxdno
+MachineIndex = 2
+MachineName = ozxdno-depot
 MachineIP = 172.24.136.41
-MachinePort = 40000
+MachinePort = 40001
 
 /*************************************************** Server Info *****************************************************/
 
 ServerMachineIndex = 1
-ServerMachineName = FileManagerX-Server
-ServerMachineIP = 120.79.65.238
+ServerMachineName = ozxdno-server
+ServerMachineIP = 172.24.136.41
 ServerMachinePort = 40000
 
 /***************************************************** User Info *****************************************************/
@@ -59,6 +61,9 @@ Example: +DataBase = [DataBaseName1]|SQL|[LoginIP]:[LoginPort]\[LoginName]\[Pass
 Example: +Depot = [DepotName2]|[DepotFolderAbsolutePath]
 Example: +DataBase = [DataBaseName2]|TXT|[DataBaseFolderAbsolutePath]
 
+Example: +Depot = [DepotName3]|[DepotFolderAbsolutePath]
+Example: +DataBase = [DataBaseName3]
+
 /********************************************** Del Local Depot & DataBase *******************************************/
 
 [Attention]: At Each Del Operation, You should delete Depot and DataBase Two Items, 
@@ -69,6 +74,9 @@ Example: -DataBase = [DataBaseName1]
 
 Example: -Depot = [DepotName2]
 Example: -DataBase = [DataBaseName2]
+
+Example: -Depot = [DepotName3]
+Example: -DataBase = [DataBaseName3]
 
 /******************************************************* END *********************************************************/
 
