complete some specific
Specific in DB Finished

--- a/cfg/FileManagerX.cfg
+++ b/cfg/FileManagerX.cfg
@@ -9,10 +9,14 @@ StartType = Depot|ShowForm
 
 /**************************************** A List of Current Depots & DataBases ***************************************/
 
+Depot = DepotC|D:\Space_For_Media\Pictures\FMX_Test_Depot_C
+DataBase = DepotC|SQL|127.0.0.1:3306\root\ani1357658uiu\Depot_C
+Depot = DepotD|D:\Space_For_Media\Pictures\FMX_Test_Depot_D
+DataBase = DepotD|TXT|D:\Space_For_Project\FileManagerX\Server\Windows_Java\dbs\4
 
 /*************************************************** All Indexes *****************************************************/
 
-Next_FileIndex = 0
+Next_FileIndex = 10
 Next_UserIndex = 0
 Next_MachineIndex = 0
 Next_DepotIndex = 0
