add Gif/Video Tools

--- a/cfg/FileManagerX.cfg
+++ b/cfg/FileManagerX.cfg
@@ -3,9 +3,10 @@
 /****************************************** This File Is VERY IMPORTANT **********************************************/
 /****************************************** This File Is VERY IMPORTANT **********************************************/
 
-[Attention]: Do Not Save Other Infos in This File, It will reset At Running.
+[Attention]: Do Not Save Other Info in This File, It will reset At Running.
 
-StartType = Depot|ShowForm
+StartType = Server|ShowForm
+NetType = ONE_IN_WWW
 
 /**************************************** A List of Current Depots & DataBases ***************************************/
 
@@ -13,33 +14,31 @@ StartType = Depot|ShowForm
 /*************************************************** All Indexes *****************************************************/
 
 Next_FileIndex = 0
-Next_UserIndex = 0
-Next_MachineIndex = 0
-Next_DepotIndex = 0
-Next_DataBaseIndex = 0
-This_MachineIndex = 2
+Next_UserIndex = 1
+Next_MachineIndex = 1
+Next_DepotIndex = 1
+Next_DataBaseIndex = 1
+This_MachineIndex = 1
 This_UserIndex = 1
 Server_MachineIndex = 1
 Server_UserIndex = 1
 
 /*************************************************** Machine Info ****************************************************/
 
-MachineIndex = 2
-MachineName = ozxdno-TestDepot
+MachineIndex = 1
+MachineName = DESKTOP-ASFUOAO
 MachineIP = 172.24.136.41
-MachinePort = 40001
+MachinePort = 40000
 
 /*************************************************** Server Info *****************************************************/
 
-ServerMachineIndex = 1
-ServerMachineName = FileManagerX-Server
-ServerMachineIP = 120.79.65.238
-ServerMachinePort = 40000
-
-/***************************************************** User Info *****************************************************/
-
-UserLoginName = FileManagerX
-UserPassword = **********
+ServerDepotIndex = 1
+ServerDepotName = DESKTOP-ASFUOAO
+ServerDepotUrl = 
+ServerDataBaseIndex = 1
+ServerDataBaseName = DESKTOP-ASFUOAO
+ServerDataBaseType = TXT
+ServerDataBaseUrl = D:\Space_For_Project\FileManagerX\Server\Windows_Java\dbs\0
 
 /*************************************************** Supports Info ***************************************************/
 
