--- a/cfg/FileManagerX.cfg
+++ b/cfg/FileManagerX.cfg
@@ -5,40 +5,45 @@
 
 [Attention]: Do Not Save Other Info in This File, It will reset At Running.
 
-StartType = Server|ShowForm
-NetType = ONE_IN_WWW
+StartType = Depot|ShowForm
 
 /**************************************** A List of Current Depots & DataBases ***************************************/
 
+Depot = DepotC|D:\Space_For_Media\Pictures\FMX_Test_Depot_C
+DataBase = DepotC|SQL|127.0.0.1:3306\root\ani1357658uiu\Depot_C
+Depot = DepotD|D:\Space_For_Media\Pictures\FMX_Test_Depot_D
+DataBase = DepotD|TXT|D:\Space_For_Project\FileManagerX\Server\Windows_Java\dbs\4
 
 /*************************************************** All Indexes *****************************************************/
 
 Next_FileIndex = 0
-Next_UserIndex = 1
-Next_MachineIndex = 1
-Next_DepotIndex = 1
-Next_DataBaseIndex = 1
-This_MachineIndex = 1
+Next_UserIndex = 0
+Next_MachineIndex = 0
+Next_DepotIndex = 0
+Next_DataBaseIndex = 0
+This_MachineIndex = 2
 This_UserIndex = 1
 Server_MachineIndex = 1
 Server_UserIndex = 1
 
 /*************************************************** Machine Info ****************************************************/
 
-MachineIndex = 1
-MachineName = DESKTOP-ASFUOAO
+MachineIndex = 2
+MachineName = ozxdno-depot
 MachineIP = 172.24.136.41
-MachinePort = 40000
+MachinePort = 40001
 
 /*************************************************** Server Info *****************************************************/
 
-ServerDepotIndex = 1
-ServerDepotName = DESKTOP-ASFUOAO
-ServerDepotUrl = 
-ServerDataBaseIndex = 1
-ServerDataBaseName = DESKTOP-ASFUOAO
-ServerDataBaseType = TXT
-ServerDataBaseUrl = D:\Space_For_Project\FileManagerX\Server\Windows_Java\dbs\0
+ServerMachineIndex = 1
+ServerMachineName = ozxdno-server
+ServerMachineIP = 172.24.136.41
+ServerMachinePort = 40000
+
+/***************************************************** User Info *****************************************************/
+
+UserLoginName = FileManagerX
+UserPassword = **********
 
 /*************************************************** Supports Info ***************************************************/
 
