dynamic add cmd & rep

--- a/cfg/FileManagerX - Client02.cfg
+++ b/cfg/FileManagerX - Client02.cfg
@@ -6,23 +6,20 @@
 [Attention]: Do Not Save Other Info in This File, It will reset At Running.
 
 StartInfo = TEMPORARY
-LoginName = 
-Password = 
-MachineName = 
+LoginName = Client02
+Password = 12345
+MachineName = Client02
 
 /***************************************************** Register ******************************************************/
 
 Example: RegisterUser = LoginName|Password|InvitationCode
 Example: RegisterMachine = Name
 
-RegisterUser = Client02|12345|ozxdno
-RegisterMachine = Client02
-
 
 /*************************************************** All Indexes *****************************************************/
 
-This_MachineIndex = 0
-This_UserIndex = 0
+This_MachineIndex = 16
+This_UserIndex = 27
 Server_MachineIndex = 1
 Server_UserIndex = 1
 
@@ -31,12 +28,18 @@ Server_UserIndex = 1
 Example: LocalDataBaseInfos = [DataBaseType]|[Url]
 Example: LocalDepotInfos = [Url]
 
+LocalDataBaseInfos = TXT|D:\Space_For_Project\FileManagerX\Server\Windows_Java\tmp
+LocalDepotInfos = 
+
 
 /**************************************** A List of Current Depots & DataBases ***************************************/
 
 
 /***************************************************** MyNet *********************************************************/
 
+Net-Group = 0|Temp Group|100
+Net-User = 0|Recommend Pathes|100|0|100
+Net-Machine = 3|3|0|0|0|0|3|3|-1|-1|B|16 3|3|3|||100|0
 
 /*************************************************** Supports ********************************************************/
 
