--- a/cfg/FileManagerX - Server01.cfg
+++ b/cfg/FileManagerX - Server01.cfg
@@ -40,6 +40,12 @@ DataBase = FileManagerX|MySQL|127.0.0.1:3306\root\ani1357658uiu\FileManagerX
 /***************************************************** MyNet *********************************************************/
 
 
+/*************************************************** CMD & REP *******************************************************/
+
+Example: CMD = CommandsPackageName
+Example: REP = RepliesPackageName
+
+
 /*************************************************** Supports ********************************************************/
 
 Example: Support = Picture|.jpg|.pv1
