--- a/cfg/FileManagerX - Server03.cfg
+++ b/cfg/FileManagerX - Server03.cfg
@@ -41,7 +41,7 @@ DataBase = FileManagerX|MySQL|127.0.0.1:3306\root\ani1357658uiu\FileManagerX
 
 Net-Group = 0|Temp Group|100
 Net-User = 0|Recommend Pathes|100|0|100
-Net-Machine = 1|1|0|0|0|0|1|1|-1|-1|B|1|1|1|||100|0
+Net-Machine = 1|1|0|0|0|0|3|1|-1|-1|B|3|1|3 1|||100|0
 
 /*************************************************** Supports ********************************************************/
 
