--- a/cfg/FileManagerX - Client01.cfg
+++ b/cfg/FileManagerX - Client01.cfg
@@ -39,8 +39,14 @@ LocalDepotInfos =
 
 Net-Group = 0|Temp Group|100
 Net-User = 0|Recommend Pathes|100|0|100
-Net-Machine = 3|3|0|0|0|0|1|3|-1|-1|B|15 1|3|1 3|||100|0
-Net-Machine = 2|2|0|0|0|0|2|2|-1|-1|B|15 2|2|2|||100|0
+Net-Machine = 2|2|0|0|0|0|1|2|-1|-1|B|15 1|2|1 2|||100|0
+Net-Machine = 3|3|0|0|0|0|3|3|-1|-1|B|15 3|3|3|||100|0
+
+/*************************************************** CMD & REP *******************************************************/
+
+Example: CMD = CommandsPackageName
+Example: REP = RepliesPackageName
+
 
 /*************************************************** Supports ********************************************************/
 
