--- a/cfg/FileManagerX - Server03.cfg
+++ b/cfg/FileManagerX - Server03.cfg
@@ -43,6 +43,12 @@ Net-Group = 0|Temp Group|100
 Net-User = 0|Recommend Pathes|100|0|100
 Net-Machine = 1|1|0|0|0|0|3|1|-1|-1|B|3|1|3 1|||100|0
 
+/*************************************************** CMD & REP *******************************************************/
+
+Example: CMD = CommandsPackageName
+Example: REP = RepliesPackageName
+
+
 /*************************************************** Supports ********************************************************/
 
 Example: Support = Picture|.jpg|.pv1
