--- a/cfg/FileManagerX - Client01.cfg
+++ b/cfg/FileManagerX - Client01.cfg
@@ -28,7 +28,7 @@ Server_UserIndex = 1
 Example: LocalDataBaseInfos = [DataBaseType]|[Url]
 Example: LocalDepotInfos = [Url]
 
-LocalDataBaseInfos = TXT|D:\Space_For_Project\FileManagerX\Server\Windows_Java\tmp
+LocalDataBaseInfos = TXT|D:\Space_For_Project\FileManagerX\Server\Windows_Java\dbs\0
 LocalDepotInfos = 
 
 
@@ -39,8 +39,7 @@ LocalDepotInfos =
 
 Net-Group = 0|Temp Group|100
 Net-User = 0|Recommend Pathes|100|0|100
-Net-Machine = 2|2|0|0|0|0|1|2|-1|-1|B|15 1|2|1 2|||100|0
-Net-Machine = 3|3|0|0|0|0|3|3|-1|-1|B|15 3|3|3|||100|0
+Net-Machine = 1|1|0|0|0|0|1|1|-1|-1|B|15 1|1|1|||100|0
 
 /*************************************************** CMD & REP *******************************************************/
 
